--- a/env.example
+++ b/env.example
@@ -1,1 +1,15 @@
+# 本地彩球查询路径
 FISH_URL="http://172.18.16.1:1752/query"
+
+
+# 刷脸ID排重库
+ID_DB_NUMBER=0
+ID_DB_DESC="刷脸库"
+
+# 导专页排重库
+PAGE_DB_NUMBER=1
+PAGE_DB_DESC="专页库"
+
+# 导小组排重库
+GROUP_DB_NUMBER=2
+GROUP_DB_DESC="小组库"
