add: search group db

--- a/env.example
+++ b/env.example
@@ -11,8 +11,8 @@ PAGE_DB_NUMBER=1
 PAGE_DB_DESC="专页库"
 
 # 导小组排重库
-GROUP_DB_NUMBER=2
-GROUP_DB_DESC="小组库"
+USER_GROUP_DB_NUMBER=2
+USER_GROUP_DB_DESC="小组库"
 
 # 是否需要两个刷脸排重库
 IS_DUBLE_FACE_DB=false
