--- a/env.example
+++ b/env.example
@@ -28,3 +28,9 @@ IS_DUBLE_FACE_DB=false
 
 # 第二个刷脸排重库的命令 php artisan id type=mz
 SECOND_FACE_DB_CODE="mz"
+
+#################################
+
+# redis 监听的端口
+REDIS_PORT=6380
+REDIS_DESC="安桑"
