--- a/env.example
+++ b/env.example
@@ -4,7 +4,7 @@ FISH_URL="http://172.18.16.1:1752/query"
 
 # 刷脸ID排重库
 ID_DB_NUMBER=0
-ID_DB_DESC="刷脸库"
+ID_DB_DESC=""
 
 # 是否需要两个刷脸排重库
 IS_DUBLE_FACE_DB=false
@@ -32,5 +32,11 @@ SECOND_FACE_DB_CODE="mz"
 #################################
 
 # redis 监听的端口
-REDIS_PORT=6380
+REDIS_PORT=6379
 REDIS_DESC="安桑"
+
+# 头像库的端口号
+REDIS_AVATER_PORT=6380
+AVATER_DB_NUMBER=0
+AVATER_DB_DESC="刷脸库"
+
