fix redis client

--- a/env.example
+++ b/env.example
@@ -36,7 +36,7 @@ REDIS_PORT=6379
 REDIS_DESC="安桑"
 
 # 头像库的端口号
-REDIS_AVATER_PORT=6380
-AVATER_DB_NUMBER=0
-AVATER_DB_DESC="刷脸库"
+REDIS_AVATER_PORT=
+AVATER_DB_NUMBER=
+AVATER_DB_DESC=""
 
