fix redis client

--- a/env.example
+++ b/env.example
@@ -35,8 +35,8 @@ SECOND_FACE_DB_CODE="mz"
 REDIS_PORT=6379
 REDIS_DESC="安桑"
 
-# 头像库的端口号
-REDIS_AVATER_PORT=
-AVATER_DB_NUMBER=
-AVATER_DB_DESC=""
+# 头像库
+PUBLIC_REDIS_PORT=6000
 
+AVATER_DB_NUMBER=0
+AVATER_DB_DESC="头像库"
