--- a/env.example
+++ b/env.example
@@ -40,3 +40,11 @@ PUBLIC_REDIS_PORT=6000
 
 AVATER_DB_NUMBER=0
 AVATER_DB_DESC="头像库"
+
+###############################
+
+# 备份用的 Google 文件夹ID
+GOOGLE_DRIVE_FOLDER_ID=""
+
+# 上传云端用的 Google 服务账号密钥文件名
+SCRIET_FILE="id-backup.json"
