--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "predis/predis": "^2.2",
     "landrok/language-detector": "^1.4",
     "vlucas/phpdotenv": "^5.6",
-    "yooper/php-text-analysis": "^1.9"
+    "yooper/php-text-analysis": "^1.9",
+    "google/apiclient": "^2.18"
   },
   "require-dev": {
     "pestphp/pest": "^1.23",
